// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component matches snapshot if type password with default props 1`] = `
<FormItem>
  <Password
    action="click"
    iconRender={[Function]}
    name=""
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="test"
    type="password"
    value=""
    visibilityToggle={true}
  />
</FormItem>
`;

exports[`Input component matches snapshot if type text with default props 1`] = `
<FormItem>
  <Input
    name=""
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    placeholder="test"
    type="text"
    value=""
  />
</FormItem>
`;
